--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,15 @@
     }
   },
   "ConnectionStrings": {
-    "MyBlogContext": "Data Source=localhost,1433; Initial Catalog=articledb; User ID=sa;Password=sa",
+    "MyBlogContext": "Data Source=localhost,1433; Initial Catalog=articledbNew; User ID=sa;Password=sa",
     "csConnection": "Server=(localdb)\\mssqllocaldb;Database=Tich hop EntityFramework;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "npnhatduy2015@gmail.com",
+    "DisplayName": "Admin (Duy nguyen)",
+    "Password": "@Nhnhatduy25",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
